data frame constructed

--- a/multivariate.rmd
+++ b/multivariate.rmd
@@ -4,18 +4,46 @@ author: Michael Li
 date: "`r format(Sys.time(), '%H:%M %d %B %Y')`"
 ---
 
-Categorical variable are discrete qualitative variables that are widely used in many context and are very easy to collect. Although it is convenient to collect categorical/qualitative data, modelling categorical response variables can be is not straight forward. Categorical variables can be further categorized into three types: Nominal, ordinal, and dichotomous. Multivariate models are complicated on its own, together with categorical variables, multivariable categorical response are pretty difficult.
+Categorical variable are discrete qualitative variables that are widely used in many context and are very easy to collect. Although it is convenient to collect categorical/qualitative data, modelling categorical response variables can be is not straight forward. Categorical variables can be further categorized into three types: Nominal, ordinal, and dichotomous. Multivariate models are complicated on its own, together with categorical variables, multivariable categorical response are pretty difficult. We will first start with multivariate dichotomous variable and then to multivariate ordinal after.
 
-The simplist type are dichotomous (or binary) variables, where there are only two outcomes (ie. yes or no, true or false, and etc). Binary response variables are not easy to model and the most common approach is by logistic regression (binomal with a logit link).
+The simplist type are dichotomous (or binary) variables, where there are only two outcomes (ie. yes or no, true or false, and etc). The most common approach is by logistic regression (binomal with a logit link).
 
-## HIV Compling Simulation
+## Multivariate Binary Simulation
+
+```{r prelims, message=FALSE, warning=FALSE}
+library(MCMCglmm)
+library(lme4)
+library(ggplot2)
+library(reshape2)
+library(tidyr)
+library(rstan)
+theme_set(theme_bw())
+
+```
+
+Let's tailor this simulation test with a HIV coupling application. 
 
 Response: HIV Antibody test (seropositive/seronegative)
 
-Predictors: Sex, coupling time, pre-coupling time, activeness
+Predictors: Coupling time, pre-coupling time, activeness
 
+Id: id, couple id
 
+```{r simulate data}
+set.seed(1221)
+Mresults <- rbinom(n=1000,size=1,prob=0.7)
+Fresults <- rbinom(n=1000,size=1,prob=0.7)
+Mpre_couplingT <- rbinom(n=1000,size=20,prob=0.3)
+Fpre_couplingT <- rbinom(n=1000,size=20,prob=0.5)
+couplingT <- rbinom(n=1000,size=20,prob=0.5)
+Mactiveness <- rbinom(n=1000,size=1,prob=0.6)
+Factiveness <- rbinom(n=1000,size=1,prob=0.4)
 
+multivar_df <- data.frame(Mresults, Fresults, 
+                          Mpre_couplingT, Fpre_couplingT, 
+                          couplingT, Mactiveness,Factiveness)
 
+head(multivar_df)
 
+```
 
