--- a/multivariate.rmd
+++ b/multivariate.rmd
@@ -69,4 +69,5 @@ summary(glmfit)
 
 The results from univariate/ glm fit is not good too. The reason is because lme4 uses Laplace approximation for the random effects and it needs large sample size random effects. We are in the worst possible case scenario of having only size 2 (couple size). The way around this is to use adaptive/Hermite gaussian quadrature.
 
+For now, we can simulate via lme4 and use MCMCglmm to fit and see if it can estimate the parameters.
 
