--- a/pymc2.rmd
+++ b/pymc2.rmd
@@ -14,7 +14,7 @@ opts_chunk$set(tidy=FALSE,engine='python',engine.path='/Users/mikemike/anaconda/
 
 ```{r pymc2}
 import numpy as np
-from pymc3 import Model, Uniform, Binomial, find_MAP, NUTS, sample, Slice, traceplot
+from pymc3 import Model, Uniform, Binomial, find_MAP, NUTS, sample, Slice, traceplot, summary
 from scipy import optimize
 
 # Parameters
@@ -23,20 +23,23 @@ beta = 0.02
 N = 100
 i0 = 1
 t0 = 0
-numobs = 20
+numobs = 5
 reporting = 1
 
 # Set up seed
 np.random.seed(111)
 
-S = [0] * numobs
-I = [0] * numobs
-R = [0] * numobs
-Iobs = [0] * numobs
-Psi = [0] * numobs
+S,I,R,Iobs,Psi = (np.zeros(numobs) for i in range(5))
+# 
+# S= np.zeros(numobs)
+# I= np.zeros(numobs)
+# R= np.zeros(numobs)
+# Iobs = np.zeros(numobs)
+# Psi = np.zeros(numobs)
 
-print(I)
-print(I[0])
+# 
+# print(I)
+# print(I[0])
 
 # Initial 
 N0 = effprop*N
@@ -46,13 +49,6 @@ R[0] = N-N0
 Psi[0] = 1 - (1-beta)**I[0]
 Iobs[0] = np.random.binomial(I[0],reporting,1)
 
-print(Iobs)
-print(Iobs[0])
-
-print(S[0])
-print(S[0] * Psi[0])
-print(Psi)
-
 for t in range(1,numobs-1):
   I[t] = np.random.binomial(S[t-1],Psi[t-1],1)
   S[t] = S[t-1] - I[t]
@@ -60,55 +56,67 @@ for t in range(1,numobs-1):
   Psi[t] = 1 - (1-beta)**I[t]
   Iobs[t] = np.random.binomial(I[t],reporting,1) 
 
-print(Iobs)
 
-for a in range(0,numobs-1):
-  print(Iobs[a])
+Iobs1 = Iobs[0]
+Iobs2 = Iobs[1]
+Iobs3 = Iobs[2]
+Iobs4 = Iobs[3]
+Iobs5 = Iobs[4]  
+  
+basic_model = Model()
 
-print(i0,N0)
-## going to fit 
+with basic_model:
+    # Priors for unknown model parameters
+    effprop = Uniform("effprop", lower=0 , upper=1)
+    beta = Uniform("beta", lower=0, upper=0.3)
+    reporting = Uniform("reporting", lower=0, upper=1)
 
-# 
-# basic_model = Model()
-# 
-# with basic_model:
-#     # Priors for unknown model parameters
-#     effprop = Uniform('effprop', lower=0 , upper=1)
-#     beta = Uniform('beta', lower=0, upper=0.3)
-#     reporting = Uniform('reporting', lower=0, upper=1)
-# 
-#     # ~ node magic
-#     N0_obs = Binomial("N0_obs",n=N,p=effprop,observed=N0)
-#     I[0] = Binomial("I[0]",n=i0,p=1,observed=I[0])
-#     S[0] = N0 - I[0]
-#     Psi[0] = 1 - (1-beta)**I[0]
-#     
-#     # Likelihood (sampling distribution) of observations
-#     I_obs[0] = Binomial("Iobs[0]",n=I[0],p=reporting,observed=Iobs[0])
-#     for t in range(1,numobs-1):
-#       I[t] = Binomial("I[t]",S[t-1],Psi[t-1],observed=I[t])
-#       S[t] = S[t-1] - I[t]
-#       R[t] = R[t-1] + I[t-1]
-#       Psi[t] = 1 - (1-beta)**I[t]
-#       I_obs[t] = Binomial("I_obs[t]",I[t],p=reporting,observed=Iobs[t]) 
-#     
-# 
-# map_estimate = find_MAP(model=basic_model)
-# print(map_estimate)
-# 
-# 
-# with basic_model:
-# 
-#     # obtain starting values via MAP
-#     start = find_MAP(fmin=optimize.fmin_powell)
-# 
-#     # instantiate sampler
-#     #step = Slice(vars=[reporting]) 
-# 
-#     # draw 1000 posterior samples
-#     trace = sample(1000, start=start) 
-#     
-# summary(trace)
+    N0 = Binomial("N0",n=N,p=effprop)
+    I1 = 1
+    S1 = N0 - I1
+    Psi = 1 - (1-beta)**I1
+    # Likelihood (sampling distribution) of observations unfolding the for loop 
+    obs1 = Binomial("obs1",n=I1,p=reporting,observed=Iobs1)
+    
+
+    I2 = Binomial("I2",n=S1,p=Psi) 
+    S2 = S1 - I1
+    Psi = 1 - (1-beta)**I2
+    obs2 = Binomial("obs2",n=I2,p=reporting,observed=Iobs2)
+
+    
+    I3 = Binomial("I3",n=S2,p=Psi) 
+    S3 = S2 - I3
+    Psi = 1 - (1-beta)**I3
+    obs3 = Binomial("obs3",n=I3,p=reporting,observed=Iobs3) 
+    
+    I4 = Binomial("I4",n=S3,p=Psi) 
+    S4 = S3 - I4
+    Psi = 1 - (1-beta)**I4
+    obs4 = Binomial("obs4",n=I4,p=reporting,observed=Iobs4) 
+    
+    I5 = Binomial("I5",n=S4,p=Psi) 
+    S5 = S4 - I5
+    Psi = 1 - (1-beta)**I5
+    obs5 = Binomial("obs5",n=I5,p=reporting,observed=Iobs5) 
+
+map_estimate = find_MAP(model=basic_model)
+print(map_estimate)
+
+
+with basic_model:
+
+    # obtain starting values via MAP
+    # start = find_MAP(fmin=optimize.fmin_powell)
+    start = find_MAP(model=basic_model)
+
+    # instantiate sampler
+    step = Slice(vars=[N0,I2,I3,I4,I5]) 
+
+    # draw 1000 posterior samples
+    trace = sample(1000, start=start) 
+    
+summary(trace)
 
 
 ```
