--- a/TSIR.rmd
+++ b/TSIR.rmd
@@ -8,8 +8,24 @@ author: Michael Li
 
 I am trying to figure out why the hybrid TSIR chain binomial is overshooting the estimates (See [poster](https://github.com/wzmli/lunchbox/blob/master/EEID_Final_Mike.pdf). If it doesn't work, just refresh the page.). To simplify the problem more, let's keep it simple and not **hybridize**, only use the binomial distribution for both processes, and use **Jags** for now.
 
+
+## Discrete Latent State TSIR Chain Binomial
+
+### Model
+
+The Reed-Frost model is a discrete-time SIR model that assumes recovery one time step after infection. Let $N$ be the population size, $I_{1}$ be the initial number of infectives, $\beta$ be the probability of adequate contact per infective, then the RF model can be written as:
+
+$$
+S_{1} = N - I_{1}
+\\
+I_{t} \sim \textrm{Binomial}(prob = 1-(1-\beta)^{I_{t-1}} ,size=S_{t-1})
+\\
+S_{t} = S_{t-1} - I_{t}
+$$
+
+We modified the RF model as a _latent_ binomial process and added an observation process with reporting probability $r$ 
 ## Jags Results 
-Using the same parameters as the models in the poster, here are the plots/chains for the discrete latent state chain binomial. _Note_ I used stronger priors for the poster and uninformative priors ($Beta(1,1)$) for $effprop$ and $repMean$. I also used the _true_ parameters as the initial starting point to see if we can even estimate the parameters given we have a good starting point.
+Using the same parameters as the models in the poster, here are the plots/chains for the discrete latent state chain binomial. _Note_ I used stronger priors for the poster and uninformative priors (Beta(1,1)) for _effprop_ and _repMean_. I also used the _true_ parameters as the initial starting point to see if we can even estimate the parameters given we have a good starting point.
 
 ###Parameters
 - R0 = 2
